--- a/css/styles.css
+++ b/css/styles.css
@@ -133,7 +133,7 @@ h2, .h2 {
 }
 @media (min-width: 1200px) {
   h2, .h2 {
-    font-size: 2rem;
+    /* font-size: 2rem; */
   }
 }
 
@@ -600,7 +600,8 @@ progress {
 
 .img-fluid {
   max-width: 100%;
-  height: auto;
+  /* height: auto; */
+  height: 700px;
 }
 
 .img-thumbnail {
@@ -11143,8 +11144,8 @@ video {
   display: block;
   font-weight: 900;
   position: relative;
-  bottom: 70vh;
-  font-size: 3.5rem;
+  bottom: 80vh;
+  font-size: 4rem;
 }
 .description {
   /* position: absolute;
@@ -11157,13 +11158,26 @@ video {
   padding: 2rem; 
 }
 
+@media (max-width: 992px) {
+  .header-text  {
+    display: block;
+    font-weight: 900;
+    position: relative;
+    bottom: 30vh;
+    font-size: 2rem;
+  }
+    .callout{
+      height: 50vh;
+    }
+}
+
 @media(max-width: 768px){
   .header-text  {
     display: block;
     font-weight: 900;
     position: relative;
     bottom: 35vh;
-    font-size: 3rem;
+    font-size: 2rem;
   }
 }
 @media(max-width: 576px){
